[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/tiles/crossair.png" type="Texture" id=1]
[ext_resource path="res://levels/Level.gd" type="Script" id=2]
[ext_resource path="res://assets/tiles/block.png" type="Texture" id=3]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/tiles/floor0.png" type="Texture" id=5]
[ext_resource path="res://levels/ui/Hearts.tscn" type="PackedScene" id=6]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/ui/BackButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sounds/bricks.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/level.mp3" type="AudioStream" id=10]
[ext_resource path="res://levels/ui/SoundButton.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 1, 1, 0, 15, 0, 16, 1, 16, 15, 15, 16, 1, 16, 0, 15 )

[sub_resource type="NavigationPolygon" id=9]
vertices = PoolVector2Array( 13, 0, 16, 3, 16, 13, 13, 16, 3, 16, 0, 13, 0, 3, 3, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]
outlines = [ PoolVector2Array( 3, 0, 0, 3, 0, 13, 3, 16, 13, 16, 16, 13, 16, 3, 13, 0 ) ]

[sub_resource type="TileSet" id=7]
0/name = "block.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 8 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "floor0.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 9 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Level" type="Node"]
script = ExtResource( 2 )

[node name="Map" type="Node2D" parent="."]

[node name="Navigation2D" type="Navigation2D" parent="Map"]

[node name="Goals" type="Node2D" parent="Map/Navigation2D"]

[node name="Blocks" type="Node2D" parent="Map/Navigation2D"]

[node name="Enemies" type="Node2D" parent="Map/Navigation2D"]

[node name="Extras" type="Node2D" parent="Map/Navigation2D"]

[node name="TileMap" type="TileMap" parent="Map/Navigation2D"]
modulate = Color( 0.823529, 0.784314, 0.729412, 1 )
tile_set = SubResource( 7 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1

[node name="Camera" parent="Map" instance=ExtResource( 7 )]

[node name="Crossair" type="Sprite" parent="Map"]
position = Vector2( 7, 7 )
z_index = 1000
texture = ExtResource( 1 )

[node name="Player" parent="Map" instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIControl" type="Control" parent="CanvasLayer"]
anchor_right = 1.0

[node name="ControlHearts" parent="CanvasLayer/UIControl" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_right = 0.5
margin_bottom = 0.0

[node name="BackButton" parent="CanvasLayer/UIControl" instance=ExtResource( 8 )]

[node name="SoundButton" parent="CanvasLayer/UIControl" instance=ExtResource( 11 )]

[node name="AudioBrick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
autoplay = true

[connection signal="health_changed" from="Map/Player" to="." method="_on_Player_health_changed"]
[connection signal="key_picked" from="Map/Player" to="." method="_on_Player_key_picked"]
[connection signal="click" from="CanvasLayer/UIControl/BackButton" to="." method="_on_BackButton_click"]
